// Copyright 2018 The Kubeflow Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/kubeflow/pipelines/backend/api/v2beta1/go_client";
package api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "backend/api/v2beta1/error.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
  // Use bearer token for authorizing access to job service.
  // Kubernetes client library(https://kubernetes.io/docs/reference/using-api/client-libraries/)
  // uses bearer token as default for authorization. The section below
  // ensures security definition object is generated in the swagger definition.
  // For more details see https://github.com/OAI/OpenAPI-Specification/blob/3.0.0/versions/2.0.md#securityDefinitionsObject
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "Bearer";
      value: {};
    }
  }
};

service PipelineService {
  // Creates a pipeline.
  rpc CreatePipeline(CreatePipelineRequest) returns (Pipeline) {
    option (google.api.http) = {
      post: "/apis/v2beta1/pipelines"
      body: "pipeline"
    };
  }

  // Finds a specific pipeline by ID.
  rpc GetPipeline(GetPipelineRequest) returns (Pipeline) {
    option (google.api.http) = {
      get: "/apis/v2beta1/pipelines/{pipeline_id}"
    };
  }

  // Finds a pipeline by Name and namespace.
  rpc GetPipelineByName(GetPipelineByNameRequest) returns (Pipeline) {
    option (google.api.http) = {
      get: "/apis/v2beta1/pipelines/names/{name}"
    };
  }

  // Finds all pipelines.
  rpc ListPipelines(ListPipelinesRequest) returns (ListPipelinesResponse) {
    option (google.api.http) = {
      get: "/apis/v2beta1/pipelines"
    };
  }

  // Deletes a pipeline and its pipeline versions.
  rpc DeletePipeline(DeletePipelineRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v2beta1/pipelines/{pipeline_id}"
    };
  }

  // Adds a pipeline version to the specified pipeline, given the pipeline ID.
  rpc CreatePipelineVersion(CreatePipelineVersionRequest)
      returns (Pipeline) {
    option (google.api.http) = {
      post: "/apis/v2beta1/pipelines/{pipeline_id}/versions"
    };
  }

  // Gets a pipeline version by pipeline version ID.
  rpc GetPipelineVersion(GetPipelineVersionRequest) returns (Pipeline) {
    option (google.api.http) = {
      get: "/apis/v2beta1/versions/{pipeline_version_id}"
    };
  }

  // Lists all pipeline versions of a given pipeline, given the pipeline ID.
  rpc ListPipelineVersions(ListPipelineVersionsRequest)
      returns (ListPipelineVersionsResponse) {
    option (google.api.http) = {
      get: "/apis/v2beta1/pipelines/{pipeline_id}/versions"
    };
  }

  // version is the default pipeline version, the pipeline's default version
  // changes to the pipeline's most recent pipeline version. If there are no
  // remaining pipeline versions, the pipeline will have no default version.
  // Examines the run_service_api.ipynb notebook to learn more about creating a
  // run using a pipeline version (https://github.com/kubeflow/pipelines/blob/master/tools/benchmarks/run_service_api.ipynb).
  rpc DeletePipelineVersion(DeletePipelineVersionRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v2beta1/versions/{pipeline_version_id}"
    };
  }

  // Update the default pipeline version of a specific pipeline.
  rpc UpdatePipelineDefaultVersion(UpdatePipelineDefaultVersionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/apis/v2beta1/pipelines/{pipeline_id}/default_version/{pipeline_version_id}"

    };
  }
}

// message Pipeline {
//   // Output. Unique pipeline ID. Generated by API server.
//   string pipeline_id = 1;

//   // Output. The time this pipeline was created.
//   google.protobuf.Timestamp created_at = 2;

//   // Optional input field. Pipeline name provided by user. If not specified,
//   // file name is used as pipeline name.
//   string display_name = 3;

//   // Optional input field. Describes the purpose of the pipeline.
//   string description = 4;

//   // The URL to the source of the pipeline. This is required when creating the
//   // pipeline through CreatePipeline API.
//   Url url = 5;

//   // In case any error happens retrieving a pipeline field, only pipeline ID
//   // and the error message is returned. Client has the flexibility of choosing
//   // how to handle error. This is especially useful during listing call.
//   string error = 6;

//   // Output only. The default version of the pipeline. 
//   PipelineVersion default_version = 7;
// }

message Pipeline {
  // The ID of the pipeline template. Will be generated by API server if not provided.
  string pipeline_id = 1;

  // Output. Unique pipeline version ID. Generated by API server.
  string pipeline_version_id = 2;

  // Output. The time this pipeline was created.
  google.protobuf.Timestamp created_at = 3;

  // Optional input field. Pipeline name provided by user. If not specified,
  // file name is used as pipeline name.
  string display_name = 4;

  // Optional input field. Describes the purpose of the pipeline.
  string description = 5;

  // The URL to the source of the pipeline. This is required when creating the
  // pipeline through CreatePipeline API.
  Url package_url = 6;

  // Namespace this pipeline belongs to.
  string namespace = 7;

  // The pipeline spec.
  google.protobuf.Struct pipeline_spec = 8;
}

message Url {
  // URL of the pipeline definition or the pipeline version definition.
  string pipeline_url = 1;
}

// Create pipeline by providing an URL pointing to the pipeline file,
// and optionally a pipeline name. If name is not provided, file name is used as
// pipeline name by default. Maximum size of 32MB is supported.
message CreatePipelineRequest {
  Pipeline pipeline = 1;

  //Optional input. Namespace the pipeline belongs to. If namespace is empty, the pipeline
  // belongs to the default namespace.
  string namespace = 5;
}

message UpdatePipelineDefaultVersionRequest {
  // The ID of the pipeline to be updated.
  string pipeline_id = 1;

  // The ID of the default version.
  string pipeline_version_id = 2;
}

message GetPipelineRequest {
  // The ID of the pipeline to be retrieved.
  string pipeline_id = 1;
}

message ListPipelinesRequest {
  // A page token to request the next page of results. The token is acquired
  // from the nextPageToken field of the response from the previous
  // ListPipelines call.
  string page_token = 1;

  // The number of pipelines to be listed per page. If there are more pipelines
  // than this number, the response message will contain a valid value in the
  // nextPageToken field.
  int32 page_size = 2;

  // Can be format of "field_name", "field_name asc" or "field_name desc"
  // Ascending by default.
  string sort_by = 3;

  // A url-encoded, JSON-serialized Filter protocol buffer (see
  // [filter.proto](https://github.com/kubeflow/pipelines/blob/master/backend/api/filter.proto)).
  string filter = 4;

  //Optional input. Filters based on the namespace.
  string namespace = 5;
}

message ListPipelinesResponse {
  repeated Pipeline pipelines = 1;

  // The total number of pipelines for the given query.
  int32 total_size = 2;

  // The token to list the next page of pipelines.
  string next_page_token = 3;
}

message GetPipelineByNameRequest {
  // The Name of the pipeline to be retrieved.
  string name = 1;

  // Optional input. The Namespace the pipeline belongs to. It could be empty in case shared pipelines or multi-user is false.
  string namespace = 2;
}

message DeletePipelineRequest {
  // The ID of the pipeline to be deleted.
  string pipeline_id = 1;
}

message CreatePipelineVersionRequest {
  // ResourceReference inside PipelineVersion specifies the pipeline that this
  // version belongs to.
  PipelineVersion pipeline_version = 1;
}

message GetPipelineVersionRequest {
  // The ID of the pipeline version to be retrieved.
  string pipeline_version_id = 1;
}

message ListPipelineVersionsRequest {
  // The pipeline whose versions are to be listed.
  string pipeline_id = 1;

  // The number of pipeline versions to be listed per page. If there are more
  // pipeline versions than this number, the response message will contain a
  // nextPageToken field you can use to fetch the next page.
  int32 page_size = 2;

  // A page token to request the next page of results. The token is acquired
  // from the nextPageToken field of the response from the previous
  // ListPipelineVersions call or can be omitted when fetching the first page.
  string page_token = 3;

  // Can be format of "field_name", "field_name asc" or "field_name desc"
  // Ascending by default.
  string sort_by = 4;

  // A base-64 encoded, JSON-serialized Filter protocol buffer (see
  // filter.proto).
  string filter = 5;
}

message ListPipelineVersionsResponse {
  repeated PipelineVersion pipeline_versions = 1;

  // The token to list the next page of pipeline versions.
  string next_page_token = 2;

  // The total number of pipeline versions for the given query.
  int32 total_size = 3;
}

message DeletePipelineVersionRequest {
  // The ID of the pipeline version to be deleted.
  string pipeline_version_id = 1;
}